# gameserver

./: CMakeLists.txt  DataReceiver.cpp  DataReceiver.h  Main.qml  ViewModel.cpp  ViewModel.h  datahandeler.cpp  datahandeler.h  file.cpp  file.h  main.cpp
Users/: user0.txt  user1.txt  user2.txt  user3.txt  user4.txt  user5.txt  user6.txt  user7.txt
